# f1-discord-bot

./: .gitignore  Formula_1.ics  README.md  cal_test.py  f1-calendar_p1_qualifying.ics  points_calculator.py  pyproject.toml  requirements.txt  runme.py
.github/workflows/: python-app.yml
data/: Formula_1.ics  drivers.json
