[tool.poetry]
name = "f1-discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "f1_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.2.2"
icalendar = "^5.0.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
